# sgm

./: CMakeLists.txt  README.md  api.cu  api.h  configuration.h  util.h
